# Dexter

./: .gitignore  Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml
dexter_core/: Cargo.toml
dexter_core/src/: config.rs  context.rs  executor.rs  lib.rs  llm.rs  redaction.rs  router.rs  safety.rs
dexter_plugins/: Cargo.toml
dexter_plugins/src/: command_exec.rs  f2.rs  ffmpeg.rs  jdupes.rs  lib.rs  libvips.rs  ocrmypdf.rs  pandoc.rs  qpdf.rs  whispercpp.rs  ytdlp.rs
dexter_tui/: Cargo.toml
dexter_tui/src/: main.rs  theme.rs
dexter_tui/src/app/: actions.rs  editor.rs  mod.rs  runtime.rs  session_log.rs  state.rs
dexter_tui/src/setup/: mod.rs  runtime.rs  state.rs  view.rs
dexter_tui/src/ui/: main_view.rs
scripts/: ci.sh
