[package]
name = "dexter_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
dirs = "5.0"
toml = "0.8"
serde_json = "1.0"
dexter_plugins = { path = "../dexter_plugins" }
async-trait = "0.1"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
